--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,10 @@
             <artifactId>springdoc-openapi-ui</artifactId>
             <version>${openapi-swagger.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-freemarker</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
